config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: northfutures
spec:
  selector:
    app.kubernetes.io/name: northfutures
  ports:
    - name: www
      port: 2368
